--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
         "guzzlehttp/guzzle": "^7.4",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.15",
-        "laravel/tinker": "^2.6"
+        "laravel/tinker": "^2.6",
+        "league/flysystem-aws-s3-v3": "^3.2",
+        "maatwebsite/excel": "^3.1",
+        "psr/simple-cache": "^2.0"
     },
     "require-dev": {
         "spatie/laravel-ignition": "^1.0",
